--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-new-project",
   "type": "module",
   "devDependencies": {
+    "webdriverio": "^8.5.7",
     "@wdio/allure-reporter": "^8.5.0",
     "@wdio/cli": "^8.5.7",
     "@wdio/local-runner": "^8.5.7",
